third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/float/double-point-2.stderr
TOML parse error at line 1, column 21
  |
1 | double-point-2 = 0.1.2
  |                     ^
expected newline, `#`
